structuration et configuration du projet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#Global configuration
+spring.application.name=safetynet-api
+
+#Tomcat configuration
+server.port=9000
+
+#Log level configuration
+logging.level.root=error
+logging.level.com.openclassrooms.hr=info
+logging.level.org.springframework.boot.web.embedded.tomcat=info
 
