--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ logging.level.root=error
 logging.level.com.openclassrooms.hr=info
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 
+# File Paths
+spring.person.filepath=src/main/resources/person.json
+spring.firestations.filepath=src/main/resources/firestations.json
