feat(medicalrecords): add medicalrecords endpoint
- added medical-records.json file
- added bean MedicalRecord's validation
- added controller, service & repo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,14 @@ spring.application.name=safetynet-api
 
 #Tomcat configuration
 server.port=9000
+#server.servlet.context-path=/api/v1
 
 #Log level configuration
 logging.level.root=error
-logging.level.com.openclassrooms.hr=info
+logging.level.com.openclassrooms.safetynetalerts=info
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 
 # File Paths
-spring.person.filepath=src/main/resources/person.json
-spring.firestations.filepath=src/main/resources/firestations.json
+spring.filepath.person=src/main/resources/person.json
+spring.filepath.firestations=src/main/resources/firestations.json
+spring.filepath.medicalrecords=src/main/resources/medical-records.json
