feat(DataObject): refactor list initialization
- added DataObject model & Repository
- refactored Repos list initialization
- adapted code to changes
- deleted unnecessary files (person.json, ect...)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,5 @@ logging.level.root=error
 logging.level.com.openclassrooms.safetynetalerts=info
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 
-# File Paths
-spring.filepath.person=src/main/resources/person.json
-spring.filepath.firestations=src/main/resources/firestations.json
-spring.filepath.medicalrecords=src/main/resources/medical-records.json
+# Data File Path
+spring.filepath.data=src/main/resources/data.json
