--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>3.2.3</version>
 			</plugin>
 			<!--      Jacoco      -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.11</version>
 				<configuration>
 					<excludes>
 						<exclude>**/models/*</exclude>
