feat(Actuator): exposed all endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ logging.level.org.springframework.boot.web.embedded.tomcat=info
 spring.filepath.person=src/main/resources/person.json
 spring.filepath.firestations=src/main/resources/firestations.json
 spring.filepath.medicalrecords=src/main/resources/medical-records.json
+
+# Actuator
+management.endpoints.web.exposure.include=*
