feat(url): completed /childAlert?address=<address> & /phoneAlert?firestation=<firestation_number>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #Global configuration
 spring.application.name=safetynet-api
+spring.main.allow-circular-references=true
 
 #Tomcat configuration
-server.port=9000
+server.port=8080
 #server.servlet.context-path=/api/v1
 
 #Log level configuration
