feat(url): completed /communityEmail?city=<city> + renamed a few methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ logging.level.org.springframework.boot.web.embedded.tomcat=info
 
 # Data File Path
 spring.filepath.data=src/main/resources/data.json
+
+# TODO: add logging + swagger
