tech(UT): Actuator configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.application.name=safetynet-api
 spring.main.allow-circular-references=true
 
+# TODO: swagger
+
 #Tomcat configuration
 server.port=8080
 #server.servlet.context-path=/api/v1
@@ -14,4 +16,6 @@ logging.level.org.springframework.boot.web.embedded.tomcat=info
 # Data File Path
 spring.filepath.data=src/main/resources/data.json
 
-# TODO: add logging + swagger
+# Actuator
+management.endpoints.web.exposure.include=health,info,trace,metrics
+management.endpoints.web.base-path=/safetynet-api/actuator
