--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 				<version>0.8.11</version>
 				<configuration>
 					<excludes>
-						<exclude>**/models/*</exclude>
+						<exclude>**/models/**</exclude>
 					</excludes>
 				</configuration>
 				<executions>
