tech(dependency): Swagger configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.filepath.data=src/main/resources/data.json
 # Actuator
 management.endpoints.web.exposure.include=health,info,trace,metrics
 management.endpoints.web.base-path=/safetynet-api/actuator
+
+# Enable Swagger UI
+springdoc.api-docs.path=/safetynet-api/api-docs
+springdoc.swagger-ui.path=/safetynet-api/swagger-ui
+#https://www.baeldung.com/spring-rest-openapi-documentation
