--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,17 @@
 spring.application.name=safetynet-api
 spring.main.allow-circular-references=true
 
-# TODO: swagger
-
 #Tomcat configuration
 server.port=8080
 #server.servlet.context-path=/api/v1
+logging.level.org.springframework.boot.web.embedded.tomcat=info
 
 #Log level configuration
 logging.level.root=error
 logging.level.com.openclassrooms.safetynetalerts=info
-logging.level.org.springframework.boot.web.embedded.tomcat=info
+logging.logback.rollingpolicy.clean-history-on-start=true
+logging.file.name=log/log-details.log
+#logging.logback.rollingpolicy.file-name-pattern=${LOG_FILE}.%d{yyyy-MM-dd}.log
 
 # Data File Path
 spring.filepath.data=src/main/resources/data.json
@@ -23,4 +24,3 @@ management.endpoints.web.base-path=/safetynet-api/actuator
 # Enable Swagger UI
 springdoc.api-docs.path=/safetynet-api/api-docs
 springdoc.swagger-ui.path=/safetynet-api/swagger-ui
-#https://www.baeldung.com/spring-rest-openapi-documentation
