--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>2.2</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- SUREFIRE -->
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-report-plugin -->
 		<dependency>
@@ -103,7 +110,7 @@
 				<configuration>
 					<excludes>
 						<exclude>**/configuration/**</exclude>
-						<exclude>**/models/**</exclude>
+						<exclude>**/domain/**</exclude>
 						<exclude>**/safetynetalerts/SafetynetAlertsApplication.java</exclude>
 					</excludes>
 				</configuration>
