feat(): Swagger documentation + code refacto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,4 @@ management.endpoints.web.base-path=/safetynet-api/actuator
 # Enable Swagger UI
 springdoc.api-docs.path=/safetynet-api/api-docs
 springdoc.swagger-ui.path=/safetynet-api/swagger-ui
+springdoc.api-docs.version=openapi_3_0
